# imagic

./: .gitignore  README.md  queries.sql
client/: .gitignore  README.md  constants.py  handlers.py  image.py  imagic.py  main.py  message.py
imagic_backend/: main.cpp
imagic_backend/class/: LoadBalancer.h
load_balancer/: .gitignore  CMakeLists.txt  Connector.cpp  Connector.h  Connectors.cpp  Connectors.h  Constants.h  LoadBalancer.cpp  LoadBalancer.h  Main.cpp  Message.cpp  Message.h  README.md  connector.cpp  connector.h  connectors.cpp  connectors.h  constants.h  load_balancer.cpp  load_balancer.h  main.cpp  message.cpp  message.h  socket.cpp  socket.h
load_balancer/class/: balancer_executor.cpp  balancer_executor.hpp  class.hpp  connector_client.cpp  connector_client.hpp  connector_server.cpp  connector_server.hpp  header.hpp  host.hpp  load_balancer.hpp  main  main.cpp  message.hpp
server/: .gitignore  CMakeLists.txt  ConnectorLoadBalancer.cpp  ConnectorLoadBalancer.h  Connectors.cpp  Connectors.h  Image.cpp  Image.h  LoadBalancer.cpp  LoadBalancer.h  README.md  Server.cpp  Server.h  constants.h  image.cpp  image.h  load_balancer_connector.cpp  load_balancer_connector.h  main.cpp  message.cpp  message.h  payload.cpp  payload.h  server.cpp  server.h  socket.cpp  socket.h  storage_manager.cpp  storage_manager.h
setup/: .gitignore  imagic.env  imagic.sh  imagic.sql  setup.sh  setup.sql  start.sh
